# hackomate

./: .gitignore  README.md  main.py  pyproject.toml  railway.toml
agents/: message_generator.py  outreach_agent.py  recruitment_agent.py
backend/: config.py  db.py  main.py  models.py
backend/routers/: challenges.py  hackathons.py  profiles.py  teams.py
backend/utils/: indexes.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/challenges/: page.tsx
frontend/src/app/community/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/hackathons/: page.tsx
frontend/src/app/hackathons/[id]/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/components/: Footer.tsx  Nav.tsx
frontend/src/components/marketing/: CTA.tsx  FeatureGrid.tsx  Hero.tsx  Logos.tsx  PageHeader.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  SectionHeader.tsx  Skeleton.tsx  Stat.tsx  Table.tsx
frontend/src/lib/: api.ts
