[project]
name = "thatonehackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
